--- a/views/notes/index.ejs
+++ b/views/notes/index.ejs
@@ -1,5 +1,5 @@
 <h2 class="mb-4 fw-bold text-warning">📋 Your Notes</h2>
-<%   %>
+<% if(items.length > 0){     %>
 <table class="table table-hover shadow-sm">
   <thead>
     <tr>
@@ -15,8 +15,8 @@
         <td><%= i + 1  %></td>
         <td><%= item.title %></td>
         <td>
-          <span class="badge <%=  %>">
-            <%=  %>
+          <span class="badge <%= item.done ? 'bg-success' : 'bg-warning text-dark' %>">
+            <%= item.done ? 'Done' : "Pending"  %>
           </span>
         </td>
         <td class="text-end">
@@ -29,8 +29,8 @@
     <% }) %>
   </tbody>
 </table>
-<% %>
+<% }else{   %>
   <h3>There is no notes created yet. Please create one!</h3>
-<% %>
+<% }%>
 
 <a href="/notes/create" class="btn btn-info btn-sm me-1">Create new Note</a>
